# YouTranser

./: .gitignore  README.md
EyerLib/src/: .gitignore  CMakeLists.txt
EyerLib/src/EyerAV/: .gitignore  CMakeLists.txt  EyerAV.hpp  EyerAVADTS.cpp  EyerAVADTS.hpp  EyerAVADTSUtil.cpp  EyerAVADTSUtil.hpp  EyerAVAlphaFrameUtil.cpp  EyerAVAlphaFrameUtil.hpp  EyerAVAudioBox.cpp  EyerAVAudioBox.hpp  EyerAVAudioFifo.cpp  EyerAVAudioFifo.hpp  EyerAVAudioFifoPrivate.hpp  EyerAVBitstreamFilter.cpp  EyerAVBitstreamFilter.hpp  EyerAVBitstreamFilterPrivate.hpp  EyerAVBitstreamFilterType.cpp  EyerAVBitstreamFilterType.hpp  EyerAVChannelLayout.cpp  EyerAVChannelLayout.hpp  EyerAVCodecID.cpp  EyerAVCodecID.hpp  EyerAVDecoder.cpp  EyerAVDecoder.hpp  EyerAVDecoderBox.cpp  EyerAVDecoderBox.hpp  EyerAVDecoderBoxGroup.cpp  EyerAVDecoderBoxGroup.hpp  EyerAVDecoderLine.cpp  EyerAVDecoderLine.hpp  EyerAVDecoderLineAudio.cpp  EyerAVDecoderLineAudio.hpp  EyerAVDecoderLineParams.cpp  EyerAVDecoderLineParams.hpp  EyerAVDecoderPrivate.hpp  EyerAVEncoder.cpp  EyerAVEncoder.hpp  EyerAVEncoderParam.cpp  EyerAVEncoderParam.hpp  (+75 more)
EyerLib/src/EyerAVTest/: AVDecoderBox_Test.hpp  CMakeLists.txt  EyerAVADTSTest.hpp  EyerAVBitstreamFilterTest.hpp  EyerAVDecoderBoxGroupTest.hpp  EyerAVDecoderBoxTest.hpp  EyerAVDecoderLineAudioTest.hpp  EyerAVDecoderLineTest.hpp  EyerAVEncoderTest.hpp  EyerAVFrameImage.hpp  EyerAVFrameTest.hpp  EyerAVGenImages.hpp  EyerAVImage2Video.hpp  EyerAVImageReaderTest.hpp  EyerAVMD5.hpp  EyerAVMediaInfoTest.hpp  EyerAVPacketTest.hpp  EyerAVReaderGetInfoTest.hpp  EyerAVReaderTest.hpp  EyerAVReaderVPXAlphaTest.hpp  EyerAVRemuxTest.hpp  EyerAVSEIUtilTest.hpp  EyerAVSEI_Reader.hpp  EyerAVTranscodeTest.hpp  EyerAVVPAlpha.hpp  EyerReEncoder.hpp  Test.cpp
EyerLib/src/EyerAVTranscoder/: CMakeLists.txt  EyerAVTranscodeStream.cpp  EyerAVTranscodeStream.hpp  EyerAVTranscoder.cpp  EyerAVTranscoder.hpp  EyerAVTranscoderError.cpp  EyerAVTranscoderError.hpp  EyerAVTranscoderHeader.hpp  EyerAVTranscoderParams.cpp  EyerAVTranscoderParams.hpp  EyerAVTranscoderStatus.cpp  EyerAVTranscoderStatus.hpp  EyerAVTranscoderStreamConfig.cpp  EyerAVTranscoderStreamConfig.hpp  EyerAVTranscoderSupport.cpp  EyerAVTranscoderSupport.hpp
EyerLib/src/EyerAVTranscoderTest/: CMakeLists.txt  Main.cpp  PixelFmtTest.hpp
EyerLib/src/EyerCore/: BLOCK_TIME.cpp  BLOCK_TIME.hpp  CMakeLists.txt  EyerBitStream.cpp  EyerBitStream.hpp  EyerBitStreamWriter.cpp  EyerBitStreamWriter.hpp  EyerBuffer.cpp  EyerBuffer.h  EyerBuffer.hpp  EyerBufferMut.cpp  EyerBufferMut.hpp  EyerBufferPlus.cpp  EyerBufferPlus.hpp  EyerBufferPlusCallback.cpp  EyerBufferPlusCallback.hpp  EyerBuffer_C.cpp  EyerCore.hpp  EyerFileReader.cpp  EyerFileReader.hpp  EyerLRUCache.cpp  EyerLRUCache.hpp  EyerLRUMap.hpp  EyerLinkedEle.hpp  EyerLinkedList.hpp  EyerLockQueue.hpp  EyerLog.cpp  EyerLog.hpp  EyerLogStatus.cpp  EyerMD5.cpp  EyerMD5.hpp  EyerMap.hpp  EyerMapEle.hpp  EyerObserver.cpp  EyerObserver.hpp  EyerObserverList.cpp  EyerObserverList.hpp  EyerObserverQueue.h  EyerObserverQueue.hpp  EyerObserverQueue_C.cpp  (+24 more)
EyerLib/src/EyerCoreTest/: CMakeLists.txt  MD5Test.hpp  Main.cpp  SmartPtrTest.hpp
EyerLib/src/EyerMath/: CMakeLists.txt  Eath.cpp  Eath.hpp  Eatrix.cpp  Eatrix.hpp  Eatrix2x1.hpp  Eatrix3x1.hpp  Eatrix3x3.hpp  Eatrix4x1.hpp  Eatrix4x4.hpp  Eect.cpp  Eect.hpp  EnterPolation.cpp  EnterPolation.hpp  Eyer2DCrop.cpp  Eyer2DCrop.hpp  EyerColor.cpp  EyerColor.hpp  EyerMath.hpp  EyerRectI.cpp  EyerRectI.hpp  RectUtil.cpp  RectUtil.hpp  Vec2I.cpp  Vec2I.hpp
EyerLib/src/EyerMathTest/: CMakeLists.txt  EectTest.hpp  Main.cpp  MathCropTest.hpp  MatrixCopy.hpp  MatrixInvert.hpp  MatrixMove.hpp  MatrixTranspose.hpp  RectUtilTest.hpp  Vec2ITest.hpp
EyerLib/src/EyerThread/: CMakeLists.txt  EyerConditionVariableBox.cpp  EyerConditionVariableBox.hpp  EyerThread.cpp  EyerThread.hpp  EyerThreadHeader.hpp
EyerLib/src/EyerThreadTest/: CMakeLists.txt  Main.cpp  ThreadEndTest.hpp  ThreadEvent.hpp  ThreadQueue.hpp
YouPicker_QT/YouPicker/: CMakeLists.txt
YouPicker_QT/YouPicker/YouCommon/: AboutWindow.cpp  LoadingTimerThread.h  LoadingWindow.cpp  LoginWindow.cpp  LoginWindow.h
YouPicker_QT/YouPicker/YouPicker/: YPSessionCreateWindow.hpp  YPSessionCreateWindow.ui  YPSessionListWindow.hpp  YPSessionListWindow.ui  YouPickerAppConfig.hpp  YouPickerLogin.hpp  you-picker.qrc  you-picker.qss
YouPicker_QT/YouPicker/YouTranscoder/: CMakeLists.txt  TaskItem.hpp  TaskItemStatusLabel.hpp  YouTransAboutWindow.cpp  YouTransAboutWindow.ui  YouTransAppConfig.cpp  YouTransAppConfig.hpp  YouTransConfig.cpp  YouTransConfig.ui  YouTransLoading.cpp  YouTransLoading.hpp  YouTransMainWindow.cpp  YouTransMainWindow.hpp  main.cpp  thirdPart_LICENSE.md  win_icon.rc  you-trans.qrc  you-trans.qss
YouPicker_QT/YouPicker/YouTranscoder/macOS/: Info.plist.in
YouPicker_QT/YouPicker/YouTranser/: CMakeLists.txt  TranscodeTaskThread.hpp  YouTransAboutWindow.hpp  YouTransConfig.hpp  YouTransLoading.cpp  YouTransLogin.cpp  YouTransLogin.hpp  YouTranscoderParams.cpp  YouTranscoderParams.hpp  gen_icon.sh  main.cpp
YouPicker_QT/YouPicker/YouTranser/icons/: YouTransIcon.icns
You_QT/: .gitignore
You_QT/You/YouCommon/: AboutWindow.h  AboutWindow.ui  CMakeLists.txt  EyerQFlowLayout.cpp  EyerQFlowLayout.h  LoadingTimerThread.cpp  LoadingWindow.cpp  LoadingWindow.h  LoadingWindow.ui  LoginWindow.cpp  LoginWindow.ui  MediaEyeApplication.cpp  MediaEyeApplication.h  MediaEyeCommon.cpp  MediaEyeCommon.h
You_QT/You/YouPicker/: CMakeLists.txt  YPSessionCreateWindow.cpp  YPSessionListWindow.cpp  YouPickerAppConfig.cpp  YouPickerLoading.cpp  YouPickerLoading.hpp  YouPickerLogin.cpp  main.cpp
You_QT/You/YouTranser/: CMakeLists.txt  TaskItem.cpp  TaskItem.ui  TaskItemStatusLabel.cpp  TranscodeTaskThread.cpp  YouTransMainWindow.cpp  YouTransMainWindow.hpp  YouTransMainWindow.ui  main.cpp  you-trans.qrc
tools/: make_3rdpart_unix_android.sh  make_3rdpart_unix_linux.sh  make_3rdpart_unix_m1.sh  make_3rdpart_unix_msys2.sh  make_eyer_lib_android.sh  make_eyer_lib_linux.sh  make_eyer_lib_m1.sh  make_eyer_lib_msys.sh  (+3 more)
(+38 files in other folders)
